--- a/js/TexttestFixture.html
+++ b/js/TexttestFixture.html
@@ -11,24 +11,25 @@
   $( document ).ready(function() {
 
     $('body').append('<p>OMGHAI!</p>');
+    var items = [];
 
-    items.push(new Item('+5 Dexterity Vest', 10, 20));
-    items.push(new Item('Aged Brie', 2, 0));
-    items.push(new Item('Elixir of the Mongoose', 5, 7));
-    items.push(new Item('Sulfuras, Hand of Ragnaros', 0, 80));
-    items.push(new Item('Sulfuras, Hand of Ragnaros', -1, 80));
-    items.push(new Item('Backstage passes to a TAFKAL80ETC concert', 15, 20));
-    items.push(new Item('Backstage passes to a TAFKAL80ETC concert', 10, 49));
-    items.push(new Item('Backstage passes to a TAFKAL80ETC concert', 5, 49));
-    // this conjured item does not work properly yet
-    items.push(new Item('Conjured Mana Cake', 3, 6));
+    items.push(new BaseItem('+5 Dexterity Vest', 10, 20));
+    items.push(new AgedBrie('Aged Brie', 2, 0));
+    items.push(new BaseItem('Elixir of the Mongoose', 5, 7));
+    items.push(new Sulfuras('Sulfuras, Hand of Ragnaros', 0, 80));
+    items.push(new Sulfuras('Sulfuras, Hand of Ragnaros', -1, 80));
+    items.push(new BackstagePasses('Backstage passes to a TAFKAL80ETC concert', 15, 20));
+    items.push(new BackstagePasses('Backstage passes to a TAFKAL80ETC concert', 10, 49));
+    items.push(new BackstagePasses('Backstage passes to a TAFKAL80ETC concert', 5, 49));
+    items.push(new ConjuredManaCake('Conjured Mana Cake', 3, 6));
 
-    var days = 2;
+    var days = 10;
+    let store = new GildedRoseStore(items);
 
     for (var i = 0; i < days; i++) {
       showHeaderFor(i);
       showItemsFor(i);
-      update_quality();
+      store.updateItem(store.items);
     }
 
     function showHeaderFor(day) {
@@ -37,8 +38,8 @@
 
     function showItemsFor(day) {
       $('body').append('<p>name, sellIn, quality</p>');
-      for (var j = 0; j < items.length; j++) {
-        var item = items[j];
+      for (var j = 0; j < store.items.length; j++) {
+        var item = store.items[j];
         $('body').append('<p>' + item.name + ', ' + item.sell_in + ', ' + item.quality + '</p>');
       }
       $('body').append('<br />');
