fixed class name

--- a/js/TexttestFixture.html
+++ b/js/TexttestFixture.html
@@ -21,7 +21,7 @@
     items.push(new BackstagePasses('Backstage passes to a TAFKAL80ETC concert', 15, 20));
     items.push(new BackstagePasses('Backstage passes to a TAFKAL80ETC concert', 10, 49));
     items.push(new BackstagePasses('Backstage passes to a TAFKAL80ETC concert', 5, 49));
-    items.push(new ConjuredManaCake('Conjured Mana Cake', 3, 5));
+    items.push(new Conjured('Conjured Mana Cake', 3, 5));
 
     var days = 10;
     let store = new GildedRoseStore(items);
